[package]
name = "rl_replay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
console-subscriber = "0.4.1"
futures-util = "0.3.31"
obws = { version = "0.14.0", git="https://github.com/Kazuryu0907/obws",branch = "fix-VlcSource", features = ["events"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"
tokio = { version = "1.44.1", features = ["full"] }
